--- a/src/styles/get-involved/number-scroll.module.scss
+++ b/src/styles/get-involved/number-scroll.module.scss
@@ -36,6 +36,7 @@
 .card {
   border: 0.5px solid #FFF;
   border-radius: 8px;
+  min-width: 207px;
   padding: 15px;
 
   flex: 1;
